--- a/index.html
+++ b/index.html
@@ -9,18 +9,50 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">Logo</div>
+        <div class="logo">Header Logo</div>
         <ul class="links">
             <li>header link one</li>
             <li>header link two</li>
             <li>header link three</li>
         </ul>
     </div>
-    <div class="content"></div>
-    <div class="information"></div>
-    <div class="quote"></div>
-    <div class="sign-up"></div>
-    <div class="footer"></div>
-    
+    <div class="content">
+        <div class="container">
+            <div class="main">This website is awesome</div>
+            <div class="caption">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <button class="sign">Sign up</button>
+        </div>
+        <div class="placeholder">this is a placeholder for an image</div>
+    </div>
+    <div class="information">
+        <div class="paragraph">Some random information</div>
+        <div class="info">
+            <img src="images/Spider.jpg" alt="spider">
+            <div class="text">this is some subtext under an image</div>
+        </div>
+        <div class="info">
+            <img src="images/Bug.jpg" alt="bug">
+            <div class="text">this is some subtext under an image</div>
+        </div>
+        <div class="info">
+            <img src="images/Bird.jpg" alt="bird">
+            <div class="text">this is some subtext under an image</div>
+        </div>
+        <div class="info">
+            <img src="images/Owl.jpg" alt="owl">
+            <div class="text">this is some subtext under an image</div>
+        </div>
+    </div>
+    <div class="quote">I am groot</div>
+    <div class="sign-up">
+        <div class="call">
+            <div>Call to action! It's time!</div>
+            <div>Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button class="click">Sign up</button>
+    </div>
+    <div class="footer">
+        <div>Copyright @ David 2023</div>
+    </div>
 </body>
 </html>
