--- a/index.html
+++ b/index.html
@@ -25,25 +25,27 @@
         <div class="placeholder">this is a placeholder for an image</div>
     </div>
     <div class="information">
-        <div class="paragraph">Some random information</div>
-        <div class="info">
-            <img src="images/Spider.jpg" alt="spider">
-            <div class="text">this is some subtext under an image</div>
-        </div>
-        <div class="info">
-            <img src="images/Bug.jpg" alt="bug">
-            <div class="text">this is some subtext under an image</div>
-        </div>
-        <div class="info">
-            <img src="images/Bird.jpg" alt="bird">
-            <div class="text">this is some subtext under an image</div>
-        </div>
-        <div class="info">
-            <img src="images/Owl.jpg" alt="owl">
-            <div class="text">this is some subtext under an image</div>
+        <div class="paragraph">Some random information.</div>
+        <div class="images">
+            <div class="info">
+                <img src="images/Spider.jpg" alt="spider">
+                <div class="text">this is some subtext under an image</div>
+            </div>
+            <div class="info">
+                <img src="images/Bug.jpg" alt="bug">
+                <div class="text">this is some subtext under an image</div>
+            </div>
+            <div class="info">
+                <img src="images/Bird.jpg" alt="bird">
+                <div class="text">this is some subtext under an image</div>
+            </div>
+            <div class="info">
+                <img src="images/Owl.jpg" alt="owl">
+                <div class="text">this is some subtext under an image</div>
+            </div>
         </div>
     </div>
-    <div class="quote">I am groot</div>
+    <div class="quote">"Nature is not a place to visit, it is home." - Gary Snyder</div>
     <div class="sign-up">
         <div class="call">
             <div>Call to action! It's time!</div>
