adding updates to layout

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Be Like Water</title> 
 </head>
 <body>
+    <div class="first">
     <div class="header">
         <div class="logo">Header Logo</div>
         <ul class="links">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li><a href="url">link one</a></li>
+            <li><a href="url">link two</a></li>
+            <li><a href="url">link three</a></li>
         </ul>
     </div>
     <div class="content">
@@ -23,6 +24,7 @@
             <button class="sign">Sign up</button>
         </div>
         <div class="placeholder">this is a placeholder for an image</div>
+    </div>
     </div>
     <div class="information">
         <div class="paragraph">Some random information.</div>
@@ -45,7 +47,10 @@
             </div>
         </div>
     </div>
-    <div class="quote">"Nature is not a place to visit, it is home." - Gary Snyder</div>
+    <div class="fourth">
+        <div class="quote">"Nature is not a place to visit, it is home</div>
+        <div class="quoter">-Gary Snyder</div>
+    </div>
     <div class="sign-up">
         <div class="call">
             <div>Call to action! It's time!</div>
