--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="first">
     <div class="header">
-        <div class="logo">Header Logo</div>
+        <div class="logo">Be Like Water</div>
         <ul class="links">
             <li><a href="url">link one</a></li>
             <li><a href="url">link two</a></li>
